service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rhbk
  name: rhbk
  namespace: rhbk
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: rhbk
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: rhbk
  type: ClusterIP
